force-app/main/default/objects/Contact/fields/I_ST_Prior_Status__c.field-meta.xml
<CustomField>
    <fullName>I_ST_Prior_Status__c</fullName>
    <label>Prior Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>