force-app/main/default/objects/Contact/fields/I_ST_Rank__c.field-meta.xml
<CustomField>
    <fullName>I_ST_Rank__c</fullName>
    <description>Added  for IST-56</description>
    <formula>IF( I_ST_Total_Score__c &gt;75 , &apos;Sizzling&apos;, IF(  I_ST_Total_Score__c &lt;=75&amp;&amp; I_ST_Total_Score__c &gt;50 , &apos;Hot&apos;,IF( I_ST_Total_Score__c &lt;=50&amp;&amp; I_ST_Total_Score__c &gt;25 , &apos;Warm&apos;,&apos;Cold&apos;)) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rank</label>
    <type>Text</type>
</CustomField>