force-app/main/default/objects/Contact/fields/I_ST_Score__c.field-meta.xml
<CustomField>
    <fullName>I_ST_Score__c</fullName>
    <description>Fields shows the score of contact based on its attributes.</description>
    <label>Contact Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>