force-app/main/default/objects/Contact/fields/I_ST_Scoring_Status_Change_Watermark__c.field-meta.xml
<CustomField>
    <fullName>I_ST_Scoring_Status_Change_Watermark__c</fullName>
    <label>Scoring Status Change Watermark</label>
    <type>DateTime</type>
</CustomField>