force-app/main/default/objects/Contact/fields/I_ST_Student_Email__c.field-meta.xml
<CustomField>
    <fullName>I_ST_Student_Email__c</fullName>
    <description>Created to allow student to store their email address</description>
    <externalId>true</externalId>
    <inlineHelpText>The student email for this person.</inlineHelpText>
    <label>Student Email</label>
    <type>Email</type>
</CustomField>