force-app/main/default/objects/Contact/fields/I_ST_Study_Interest__c.field-meta.xml
<CustomField>
    <fullName>I_ST_Study_Interest__c</fullName>
    <description>Created for IST-43. This field is a controlling for Career Interest Field</description>
    <label>Study Interest</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>I_ST_Study_Interest</valueSetName>
    </valueSet>
</CustomField>