force-app/main/default/objects/Contact/fields/I_ST_Study_Level__c.field-meta.xml
<CustomField>
    <fullName>I_ST_Study_Level__c</fullName>
    <description>Created for IST-43</description>
    <label>Study Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>I_ST_Study_Level</valueSetName>
    </valueSet>
</CustomField>