force-app/main/default/objects/Contact/fields/I_ST_Time_Frame_to_Study__c.field-meta.xml
<CustomField>
    <fullName>I_ST_Time_Frame_to_Study__c</fullName>
    <description>Created for IST-43</description>
    <label>Time Frame To Study</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>I_ST_Time_Frame_to_Study</valueSetName>
    </valueSet>
</CustomField>