force-app/main/default/objects/Contact/fields/I_ST_Total_Score__c.field-meta.xml
<CustomField>
    <fullName>I_ST_Total_Score__c</fullName>
    <formula>I_ST_Score__c +  I_ST_Incremental_Score__c + I_ST_Adjustment_Score__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>