force-app/main/default/objects/Contact/fields/I_ST_Work_Email__c.field-meta.xml
<CustomField>
    <fullName>I_ST_Work_Email__c</fullName>
    <description>Created to allow user to add his work email address</description>
    <externalId>true</externalId>
    <inlineHelpText>The work email for this person.</inlineHelpText>
    <label>Work Email</label>
    <type>Email</type>
</CustomField>