force-app/main/default/objects/Contact/fields/L_PR_Preferred_Pronoun__c.field-meta.xml
<CustomField>
    <fullName>L_PR_Preferred_Pronoun__c</fullName>
    <label>Preferred Pronoun</label>
    <length>255</length>
    <type>Text</type>
</CustomField>