force-app/main/default/objects/Contact/fields/L_TC_Admin__c.field-meta.xml
<CustomField>
    <fullName>L_TC_Admin__c</fullName>
    <defaultValue>false</defaultValue>
    <description>TRACR Admin</description>
    <label>Admin</label>
    <type>Checkbox</type>
</CustomField>