force-app/main/default/objects/Contact/fields/L_TC_Assessor__c.field-meta.xml
<CustomField>
    <fullName>L_TC_Assessor__c</fullName>
    <defaultValue>false</defaultValue>
    <description>TRACR Assessor</description>
    <label>Assessor</label>
    <type>Checkbox</type>
</CustomField>