force-app/main/default/objects/Contact/fields/L_TC_Reviewer__c.field-meta.xml
<CustomField>
    <fullName>L_TC_Reviewer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reviewer</label>
    <type>Checkbox</type>
</CustomField>