force-app/main/default/objects/Contact/fields/L_TC_Trainer__c.field-meta.xml
<CustomField>
    <fullName>L_TC_Trainer__c</fullName>
    <defaultValue>false</defaultValue>
    <description>TRACR Trainer</description>
    <label>Trainer</label>
    <type>Checkbox</type>
</CustomField>