force-app/main/default/objects/Contact/fields/Prediction_will_become_student__c.field-meta.xml
<CustomField>
    <fullName>Prediction_will_become_student__c</fullName>
    <label>Prediction - will become student?</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>