force-app/main/default/objects/Contact/validationRules/Employment_End_Date_greater_to_StartDate.validationRule-meta.xml
<ValidationRule>
    <fullName>Employment_End_Date_greater_to_StartDate</fullName>
    <active>true</active>
    <description>Employment End date should be greater than Employment Start Date</description>
    <errorConditionFormula>I_RS_Employment_End_Date__c &lt;  I_RS_Employment_Start_Date__c</errorConditionFormula>
    <errorDisplayField>I_RS_Employment_End_Date__c</errorDisplayField>
    <errorMessage>Employment End Date can&apos;t be less than Employment Start Date</errorMessage>
</ValidationRule>