force-app/main/default/objects/Contact/validationRules/I_ST_Valid_First_Name_Mobile_OR_Email.validationRule-meta.xml
<ValidationRule>
    <fullName>I_ST_Valid_First_Name_Mobile_OR_Email</fullName>
    <active>true</active>
    <description>Contact need First Name as required</description>
    <errorConditionFormula>ISBLANK( FirstName )</errorConditionFormula>
    <errorMessage>First Name is required to create a Contact</errorMessage>
</ValidationRule>