force-app/main/default/objects/Contact/validationRules/I_ST_Validate_Date_of_Birth.validationRule-meta.xml
<ValidationRule>
    <fullName>I_ST_Validate_Date_of_Birth</fullName>
    <active>true</active>
    <description>Validate Date of Birth to avoid entering future date.</description>
    <errorConditionFormula>Birthdate   &gt;=   TODAY()</errorConditionFormula>
    <errorMessage>Date of birth can not  be a future date</errorMessage>
</ValidationRule>