force-app/main/default/objects/Contact/validationRules/Only_Owner_can_Edit_Contact.validationRule-meta.xml
<ValidationRule>
    <fullName>Only_Owner_can_Edit_Contact</fullName>
    <active>true</active>
    <errorConditionFormula>CONTAINS($Profile.Name, &quot;Partner Community&quot;)
&amp;&amp;
OwnerId != $User.Id</errorConditionFormula>
    <errorMessage>You can only edit Contacts created by you.</errorMessage>
</ValidationRule>