force-app/main/default/objects/Contact/validationRules/ORCID_ID_format.validationRule-meta.xml
<ValidationRule>
    <fullName>ORCID_ID_format</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(ISBLANK(I_RS_ORCID_ID__c)) 
      &amp;&amp; 

(LEN(I_RS_ORCID_ID__c) &lt; 19 
       ||
  NOT( REGEX(I_RS_ORCID_ID__c, &quot;^[0-9]{4}-[0-9]{4}-[0-9]{4}-[0-9]{4}$&quot;) ))</errorConditionFormula>
    <errorDisplayField>I_RS_ORCID_ID__c</errorDisplayField>
    <errorMessage>Please use the following format xxxx-xxxx-xxxx-xxxx</errorMessage>
</ValidationRule>