force-app/main/default/objects/Contact/validationRules/phone_number_format_Home.validationRule-meta.xml
<ValidationRule>
    <fullName>phone_number_format_Home</fullName>
    <active>true</active>
    <errorConditionFormula>!ISBLANK(HomePhone) &amp;&amp;
!REGEX(HomePhone, &quot;^[\\+0-9\\s]+$&quot;)</errorConditionFormula>
    <errorDisplayField>HomePhone</errorDisplayField>
    <errorMessage>Phone number can only consist of numbers, +, and spaces</errorMessage>
</ValidationRule>