force-app/main/default/objects/Contact/validationRules/Researchers_cannot_edit_Email_and_or_Org.validationRule-meta.xml
<ValidationRule>
    <fullName>Researchers_cannot_edit_Email_and_or_Org</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
     CONTAINS($Profile.Name, &quot;Partner Community&quot;), 
     OR(
          ISCHANGED(Email),
           ISCHANGED(I_RS_Organisation_Name__c)
        )
    )</errorConditionFormula>
    <errorMessage>To update the Email or Organisation fields, please contact the PRIME Support (prime.support@latrobe.edu.au)</errorMessage>
</ValidationRule>