force-app/main/default/objects/Contact/validationRules/SACE_Read_Only_Contact.validationRule-meta.xml
<ValidationRule>
    <fullName>SACE_Read_Only_Contact</fullName>
    <active>true</active>
    <errorConditionFormula>$Permission.I_RM_SACE_Read_Only</errorConditionFormula>
    <errorMessage>You do not have the permission to edit Contacts</errorMessage>
</ValidationRule>