force-app/main/default/objects/Contact/listViews/My_Contact.listView-meta.xml
<ListView>
    <fullName>My_Contact</fullName>
    <columns>FULL_NAME</columns>
    <columns>I_RS_Preferred_Full_Name__c</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>I_RS_Logged_In_Users_Contact__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>My Contact</label>
</ListView>